# odtlearn

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  api.html  contributing.html  environment.yml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quick_start.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  user_guide.html
.circleci/: config.yml
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
.github/workflows/: cbc_gh_actions.yml  ci.yml  ci_debug.yml  pre-commit.yaml  pypi.yml  sphinx.yml
FairTrees/: __init__.py
FairTrees/tests/: test_common.py
RobustTrees/: RobustOCT.py  RobustTree.py  RobustTreeUtils.py  Tree.py  __init__.py
RobustTrees/tests/: test_common.py
StrongTrees/: BendersOCT.py  FlowOCT.py  StrongTree.py  StrongTreeUtils.py  Tree.py  __init__.py
StrongTrees/tests/: test_StrongTree.py  test_common.py  test_template.py
_downloads/084669b45b226af6f637ab8457c8c5aa/: plot_classifier.py
_downloads/2b40490a24dc68b75bbf19cd3ce47654/: fit_StrongTree_example.ipynb
_downloads/33e3b8fda2687ae96879282d905830b7/: plot_template.ipynb
_downloads/5b2cebfab9d8cca4393d66b1e4b8a8e7/: plot_transformer.ipynb
_downloads/9bd28b2da76856210ba111916c08eea3/: pipeline_example.ipynb
_downloads/ee375cf898b014c0252d6a333f4194f5/: fit_StrongTree_example.py
_downloads/f800ecf970df789eafc3e91bf7d7f1a6/: plotting_example.ipynb
_downloads/fd28fb160b547209d976f0e1ddf0aaeb/: fit_FairTree_example.ipynb
_downloads/fed3e85cac62fc93e088aa8cb008d467/: plot_classifier.ipynb
_modules/: index.html  odtlearn.html
_modules/odtlearn/: FairTree.html  PrescriptiveTree.html  RobustTree.html  StrongTree.html  constants.html  constrained_oct.html  datasets.html  fair_oct.html  flow_oct.html  flow_oct_ms.html  flow_oct_ss.html  flow_opt.html  flow_opt_ms.html  flow_opt_ss.html  opt_ct.html  opt_dt.html  opt_pt.html  robust_oct.html  tree_classifier.html
_modules/sklearn/: base.html
_modules/trees/: FairTree.html  PrescriptiveTree.html  RobustTree.html  StrongTree.html
_sources/: api.md.txt  api.rst.txt  contributing.md.txt  index.md.txt  index.rst.txt  quick_start.rst.txt  user_guide.rst.txt
_sources/auto_examples/: fit_FairTree_example.rst.txt  fit_StrongTree_example.rst.txt  index.rst.txt  pipeline_example.rst.txt  plot_classifier.rst.txt  plot_template.rst.txt  plot_transformer.rst.txt  plotting_example.rst.txt
_sources/notebooks/: FairOCT.ipynb.txt  FlowOCT.ipynb.txt  RobustOCT.ipynb.txt
_sources/user_guide/: adding_constraints.md.txt  fair_optimal_classification_trees.md.txt  index.md.txt  optimal_classification_trees.md.txt  optimal_robust_classification_trees.md.txt
_static/: documentation_options.js  pygments.css  toggleprompt.js
_static/css/: trees.css
auto_examples/: fit_FairTree_example.html  fit_StrongTree_example.html  index.html  pipeline_example.html  plot_classifier.html  plot_template.html  plot_transformer.html  plotting_example.html
autoapi/odtlearn/: index.html
data/compas/: compas_train_1.csv
data/prescriptive_tree/: sample.ipynb  train_50.csv  train_500.csv
development/: contributing.html  index.html  solver.html
doc/: conf.py
docs/: api.md  api.rst  conf.py  contributing.md  index.md  index.rst  installation.md  quick_start.md  quick_start.rst  requirements.txt  user_guide.md  user_guide.rst
docs/_templates/: class.rst  custom_class_template.rst  custom_module_template.rst
examples/: fit_FairTree_example.py  fit_StrongTree_example.py  pipeline_example.py  plot_template.py  plot_transformer.py  plotting_example.py
figures/: classes.dot  classes_old.dot  classifiers.dot  edit_dot.py  generate_uml_figures.sh  paper_figures.py  problem_formulation.dot
images/: classifier_uml.tex  combined_uml.tex  odtlearn.uml  utils_uml.tex
notebooks/: FairOCT.html  FairOCT.ipynb  FairTree.html  FairTree.ipynb  FlowOCT.html  FlowOCT.ipynb  FlowOPT.html  FlowOPT.ipynb  PrescriptiveTree.html  PrescriptiveTree.ipynb  RobustOCT.html  RobustOCT.ipynb  RobustTree.html  RobustTree.ipynb  StrongTree.html  StrongTree.ipynb  index.html
odtlearn/: BendersOCT.py  BendersOPT_IPW.py  FairOCT.py  FairTree.py  FlowOCT.py  FlowOCTMultipleNode.py  FlowOCTSingleNode.py  FlowOPT.py  FlowOPTMultipleNode.py  FlowOPTSingleNode.py  PrescriptiveTree.py  RobustOCT.py  RobustTree.py  StrongTree.py  __init__.py  classification_formulation.py  constants.py  constrained_oct.py  datasets.py  fair_oct.py  flow_ms.py  flow_oct.py  flow_oct_ms.py  flow_oct_ss.py  flow_opt.py  flow_opt_ms.py  flow_opt_ss.py  flow_ss.py  opt_ct.py  opt_dt.py  opt_pt.py  prescriptive_formulation.py  problem_formulation.py  robust_oct.py  test.py  tree_classifier.py
trees/: FairTree.py  PrescriptiveTree.py  RobustOCT.py  RobustTree.py  StrongTree.py
user_guide/: adding_constraints.html  fair_optimal_classification_trees.html  index.html  optimal_classification_trees.html  optimal_prescriptive_trees.html  optimal_robust_class_trees.html  optimal_robust_classification_trees.html
(+197 files in other folders)
