[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odtlearn"
description = "A package for tree-based statistical estimation and inference using optimal decision trees."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Patrick Vossler" },
    { name = "Sina Aghaei" },
    { name = "Nathan Justin" },
    { name = "Nathanael Jo" },
]
maintainers = [
    { name = "Patrick Vossler", email = "patrick.vossler18@gmail.com" },
]
keywords = [
    "Optimization",
    "Mixed Integer Programming",
    "Optimal Decision Trees",
    "Integer Programming",
    "Operations Research",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
    "cffi>=1.15",
    "mip>=1.15",
    "scikit-learn>=1.2",
    "numpy>=1.23",
    "pandas>=1.5",
    "seaborn>=0.13.2",
    "matplotlib>=3.5.3",
]

dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autoapi",
    "furo",
    "lxml",
    "sphinx_math_dollar",
    "myst-parser",
    "nbconvert>=6.5.3",
    "nbsphinx>=0.9.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-gallery>=0.14.0",
    "sphinx-prompt>=1.7.0",
    "numpydoc>=1.6.0",
    "myst-parser>=2.0.0",
]
test = ["pytest>=7.4", "gurobipy>=10.0.0"]

[project.urls]
"Homepage" = "https://d3m-research-group.github.io/odtlearn/"
"Repository" = "https://github.com/D3M-Research-Group/odtlearn"

[tool.setuptools.packages.find]
where = ["."]
include = ["odtlearn*"]

[tool.setuptools.package-data]
odtlearn = [
    "data/*.csv",
    "data/*.npz",
    "data/prescriptive/test_v2_200.csv",
    "data/prescriptive/train_v2_100.csv",
    "data/prescriptive/train_50.csv",
]

[tool.setuptools_scm]
write_to = "odtlearn/_version.py"

[tool.isort]
profile = "black"
