[metadata]
description_file = README.md

[aliases]
test = pytest

# [tool:pytest]
# addopts = --doctest-modules --cov=./

[flake8]
exclude = __init__.py,versioneer.py,_version.py, conf.py
max-line-length = 120
per-file-ignores =
    # line too long
    datasets.py: E501,
    _reingold_tilford.py: E501,